put h2 and nav in body and change spacing on mailto per recommendation on things to correct from grading

--- a/style.css
+++ b/style.css
@@ -38,6 +38,7 @@ body {
     * {text-align: center;}
     
     img {
+      padding: px;
       border-radius: 8px;
         max-width: 100%;
     }
